<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTabSelect"
    android:orientation="vertical">

    <include
        android:id="@+id/include_top_green"
        layout="@layout/include_top_title_green"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_bg_analyse">

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_margin="10dp"

        android:background="@drawable/bg_background_white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTabSelect"
                android:text="충갈로리"
                android:padding="@dimen/dp_20"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/total_result"
                android:padding="@dimen/dp_20"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorTabSelect"
                    android:text="@string/cal"
                    android:padding="@dimen/dp_20"
                    android:gravity="center_vertical"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/cal_result"
                    android:padding="@dimen/dp_20"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorTabSelect"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_20"
                    android:text="@string/nut" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/nut_result"
                    android:padding="@dimen/dp_20"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text10"
            android:text="@string/notice"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>