<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FF8619">

            <ImageView
                android:id="@+id/ic_tx"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_40"
                android:layout_marginBottom="@dimen/dp_40"
                android:layout_toRightOf="@+id/tv1"
                android:background="@drawable/icon_take_photo" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="@dimen/dp_60"
                android:text="@string/selectphoto"
                android:textColor="@color/white" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yy_value"
            android:textSize="@dimen/space_20dp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#AFAFAF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/dp_10"
                android:layout_gravity="center"
                android:background="@drawable/ic_hot"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="칼로리"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_kcal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kcal"
                android:textSize="15dp"
                android:layout_margin="@dimen/space_10dp"
                android:gravity="right"
                android:layout_gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#AFAFAF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/dp_10"
                android:layout_gravity="center"
                android:background="@drawable/ic_ts"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="탄수화물"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ts"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="g"
                android:textSize="15dp"
                android:layout_margin="@dimen/space_10dp"
                android:gravity="right"
                android:layout_gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#AFAFAF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/dp_10"
                android:layout_gravity="center"
                android:background="@drawable/ic_db"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="단백질"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_db"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="g"
                android:textSize="15dp"
                android:layout_margin="@dimen/space_10dp"
                android:gravity="right"
                android:layout_gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#AFAFAF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/dp_10"
                android:layout_gravity="center"
                android:background="@drawable/ic_zf"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="지방"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_zf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="g"
                android:textSize="15dp"
                android:layout_margin="@dimen/space_10dp"
                android:gravity="right"
                android:layout_gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_analyse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analyse"
            android:layout_margin="@dimen/text10"/>
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/analyseresult"
            android:background="@drawable/textview_border_bg"
            android:textSize="@dimen/space_20dp"
            android:textStyle="bold"/>

    </LinearLayout>


</ScrollView>